[package]
name = "itertree"
description = "Hobby project to experiment with tree traversal using iterators"
homepage = "https://github.com/cjrh/itertree-rs"
repository = "https://github.com/cjrh/itertree-rs"
version = "0.0.3"
authors = ["Caleb Hattingh <caleb.hattingh@gmail.com>"]
edition = "2018"
readme = "README.md"
license-file = "LICENSE"
keywords = ["algorithm", "tree"]
include = [
    "**/*.rs",
    "Cargo.toml",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "itertree"

[dependencies]

[dev-dependencies]
rstest = "0.9.0"
